--- a/client/src/styles/themes/light.scss
+++ b/client/src/styles/themes/light.scss
@@ -198,7 +198,7 @@
     }
   }
 
-  .romm-members-header {
+  .room-members-header {
     background-color: $light-600 !important;
     border-bottom: .1rem solid $light-100;
     padding-bottom: .09rem !important;
